--- a/index.html
+++ b/index.html
@@ -10,25 +10,40 @@
       text-align: center;
       background-color: #fff0f5;
       color: #333;
-      padding-top: 100px;
+      padding-top: 80px;
     }
+
     h1 {
       font-size: 2.5em;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
     }
-    #countdown {
+
+    .countdown {
       font-size: 2em;
-      margin-bottom: 60px;
+      margin-bottom: 20px;
     }
+
+    .unit {
+      margin: 10px 0;
+    }
+
     .message {
+      margin-top: 50px;
       font-size: 1.8em;
       color: #d63384;
     }
   </style>
 </head>
 <body>
-  <h1>چند روز تا تولد مونده؟ 🎉</h1>
-  <div id="countdown">...</div>
+  <h1>تا تولدت چقدر مونده؟ 🎉</h1>
+
+  <div class="countdown">
+    <div class="unit" id="days">در حال بارگذاری...</div>
+    <div class="unit" id="hours"></div>
+    <div class="unit" id="minutes"></div>
+    <div class="unit" id="seconds"></div>
+  </div>
+
   <div class="message">تولدت مبارک آجی مهربونم 💖 دوستت دارم 😘</div>
 
   <script>
@@ -36,22 +51,31 @@
       const now = new Date();
       const currentYear = now.getFullYear();
 
-      // تولد در ۱۱ دی (معادل 31 دسامبر)
+      // تولد در ۱۱ دی = 31 دسامبر میلادی
       let birthday = new Date(`${currentYear}-12-31T00:00:00`);
 
-      // اگر امروز بعد از ۱۱ دی باشه، برای سال بعد تنظیم کن
       if (now > birthday) {
         birthday = new Date(`${currentYear + 1}-12-31T00:00:00`);
       }
 
-      const diffTime = birthday - now;
-      const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
+      const diff = birthday - now;
 
-      document.getElementById("countdown").textContent =
-        `${diffDays} روز تا ۱۱ دی باقی مانده`;
+      const totalSeconds = Math.floor(diff / 1000);
+      const days = Math.floor(totalSeconds / (3600 * 24));
+      const hours = Math.floor((totalSeconds % (3600 * 24)) / 3600);
+      const minutes = Math.floor((totalSeconds % 3600) / 60);
+      const seconds = totalSeconds % 60;
+
+      document.getElementById("days").textContent = `${days} روز باقی مانده`;
+      document.getElementById("hours").textContent = `${hours} ساعت`;
+      document.getElementById("minutes").textContent = `${minutes} دقیقه`;
+      document.getElementById("seconds").textContent = `${seconds} ثانیه`;
     }
 
+    // اولین بار اجرا
     updateCountdown();
+    // بروزرسانی هر ثانیه
+    setInterval(updateCountdown, 1000);
   </script>
 </body>
 </html>
